--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@tauri-apps/api": "^1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.378.0",
@@ -18,10 +20,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
+    "@types/node": "^20.12.11",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
@@ -30,5 +34,6 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.0.2",
     "vite": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@4.2.1"
 }
